[package]
name = "grove"
version = "0.1.0"
edition = "2021"
description = "GROVE — Graph-Rendered Ontology for Visual Exploration. A knowledge-mapping app with semantic markdown relationships and interactive mind-map visualization."
license = "0BSD"

[dependencies]
eframe = "0.31"
egui = "0.31"
petgraph = "0.7"
pulldown-cmark = "0.12"
regex = "1"
notify = { version = "7", features = ["macos_fsevent"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
